# ThreeGlassesGame

./: CHANGELOG.md  LICENSE  README.md  ThreeGlassesGame.cabal
src/: Main.hs  ThreeGlassesGame.hs
